kuberntes/DeploymentApi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: to-do-api
  namespace: to-do-ns
  labels:
    app: to-do-api
spec:
  selector:
    matchLabels:
      app: to-do-api

  replicas: 1

  template:
    metadata:
      labels:
        app: to-do-api
    spec:
      containers:
        - name: to-do-api
          image: contaparatestespoupas/to-do-api:latest
          imagePullPolicy: Always
          resources: {}
          
          ports:
            - containerPort: 4000

---

apiVersion: v1
kind: Service
metadata:
  name: to-do-api-service
  namespace: to-do-ns
spec:
  selector:
    app: to-do-api

  ports:
    - port: 4000
      targetPort: 4000
