kuberntes/DeploymentClient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: to-do-client
  namespace: to-do-ns
  labels:
    app: to-do-client
spec:
  selector:
    matchLabels:
      app: to-do-client

  template:
    metadata:
      labels:
        app: to-do-client
    spec:
      containers:
        - name: to-do-client
          image: contaparatestespoupas/to-do-client:latest
          imagePullPolicy: Always
          resources: {}

          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: to-do-client-service
  namespace: to-do-ns
spec:
  selector:
    app: to-do-client

  ports:
    - port: 3000
      targetPort: 3000
