kuberntes/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: to-do-ingress
  namespace: to-do-ns
spec:
  rules:
    - host: todo-list.my
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: to-do-server-service
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: to-do-client-service
                port:
                  number: 3000
